info overflow fix

--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,13 @@
 #info {
     background-color: rgb(53, 53, 53);
     color: white;
-    font-size: 1.25rem;
-    padding: 2rem;
+    font-size: 1rem;
+    padding: 1rem;
     width: 20vw;
     height: 20vh;
     border: 3px solid rgb(0, 130, 252);
     position: absolute;
-}
-
-#instructions {
-
+    overflow: auto;
 }
 
 #currentVertex {
